# OpenCascadeQtExamples

./: .gitignore  CMakeLists.txt  README.md  config.cmake
Arrows/: CMakeLists.txt  interactivearrowsequence.cpp  interactivearrowsequence.h  viewport.cpp  viewport.h
EdgeExplorer/: .gitignore  CMakeLists.txt  aspectwindow.cpp  aspectwindow.h  brepserializer.cpp  brepserializer.h  mainwindow.cpp  mainwindow.h  normaldetector.cpp  normaldetector.h  viewport.cpp  viewport.h
EdgeExplorer/InteractiveObjects/: interactivecurve.cpp  interactivecurve.h  interactivefacenormal.cpp  interactivefacenormal.h  interactivefacenormalserializer.cpp  interactivefacenormalserializer.h  interactivenormal.cpp  interactivenormal.h
EdgeExplorer/ModelLoader/: abstractmodelloader.h  breploader.cpp  breploader.h  igesloader.cpp  igesloader.h  modelloaderfactorymethod.cpp  modelloaderfactorymethod.h  objloader.cpp  objloader.h  steploader.cpp  steploader.h  stlloader.cpp  stlloader.h
EdgeExplorer/Models/: robo_J0.stl  robo_J1.brep  robo_J2.brep  robo_J2.stl  robo_J3.brep  robo_J5.brep  robo_J6.brep  table_flat.step
ExamplesBase/: CMakeLists.txt  ExamplesBase_global.h  interactiveobjectsmainwindow.cpp  interactiveobjectsmainwindow.h  utility.cpp  utility.h
ExamplesBase/Editors/: dimentionlenghteditor.cpp  dimentionlenghteditor.h  interactiveobjectcuboideditor.cpp  interactiveobjectcuboideditor.h  interactiveobjectcylindereditor.cpp  interactiveobjectcylindereditor.h  interactiveobjecteditor.cpp  interactiveobjecteditor.h  interactiveobjecteditorcreator.cpp  interactiveobjecteditorcreator.h  interactiveobjectsphereeditor.cpp  interactiveobjectsphereeditor.h  interactiveobjectsurfacecircleofrevoleditor.cpp  interactiveobjectsurfacecircleofrevoleditor.h  interactiveobjectsurfaceellipseofrevoleditor.cpp  interactiveobjectsurfaceellipseofrevoleditor.h  interactiveobjectsurfacehyperofrevoleditor.cpp  interactiveobjectsurfacehyperofrevoleditor.h  interactiveobjectsurfaceparabofrevoleditor.cpp  interactiveobjectsurfaceparabofrevoleditor.h  interactiveobjectsurfaceplaneeditor.cpp  interactiveobjectsurfaceplaneeditor.h  manipulatoreditor.cpp  manipulatoreditor.h  point.cpp  point.h
ExamplesBase/InteractiveObjects/: interactivecurve.cpp  interactivecurve.h  interactivefacenormal.cpp  interactivefacenormal.h  interactivefacenormalserializer.cpp  interactivefacenormalserializer.h  interactivenormal.cpp  interactivenormal.h
ExamplesBase/ModelLoader/: abstractmodelloader.h  breploader.cpp  breploader.h  igesloader.cpp  igesloader.h  modelloaderfactorymethod.cpp  modelloaderfactorymethod.h  objloader.cpp  objloader.h  steploader.cpp  steploader.h  stlloader.cpp  stlloader.h
ExamplesBase/ObjectModels/: interactiveobjectitemmodel.cpp  interactiveobjectitemmodel.h  interactiveobjectitemmodelcreator.cpp  interactiveobjectitemmodelcreator.h  interactiveobjectitemmodelcuboid.cpp  interactiveobjectitemmodelcuboid.h  interactiveobjectitemmodelcylinder.cpp  interactiveobjectitemmodelcylinder.h  interactiveobjectitemmodeldelegate.cpp  interactiveobjectitemmodeldelegate.h  interactiveobjectitemmodelshape.cpp  interactiveobjectitemmodelshape.h  interactiveobjectitemmodelsphere.cpp  interactiveobjectitemmodelsphere.h  interactiveobjectitemmodelsurface.cpp  interactiveobjectitemmodelsurface.h  interactiveobjectitemmodelsurfacecircleofrevol.cpp  interactiveobjectitemmodelsurfacecircleofrevol.h  interactiveobjectitemmodelsurfaceellipseofrevol.cpp  interactiveobjectitemmodelsurfaceellipseofrevol.h  interactiveobjectitemmodelsurfacehyperofrevol.cpp  interactiveobjectitemmodelsurfacehyperofrevol.h  interactiveobjectitemmodelsurfaceparabofrevol.cpp  interactiveobjectitemmodelsurfaceparabofrevol.h  interactiveobjectitemmodelsurfaceplane.cpp  interactiveobjectitemmodelsurfaceplane.h  interactiveobjectitemmodelsurfacerevolution.cpp  interactiveobjectitemmodelsurfacerevolution.h  objectstreemodel.cpp  objectstreemodel.h
ExamplesBase/Objects/: interactivecuboid.cpp  interactivecuboid.h  interactivecylinder.cpp  interactivecylinder.h  interactiveobject.cpp  interactiveobject.h  interactiveshape.cpp  interactiveshape.h  interactivesphere.cpp  interactivesphere.h  interactivesurface.cpp  interactivesurface.h  interactivesurfacecircleofrevol.cpp  interactivesurfacecircleofrevol.h  interactivesurfaceellipseofrevol.cpp  interactivesurfaceellipseofrevol.h  interactivesurfacehyperofrevol.cpp  interactivesurfacehyperofrevol.h  interactivesurfaceparabofrevol.cpp  interactivesurfaceparabofrevol.h  interactivesurfaceplane.cpp  interactivesurfaceplane.h  interactivesurfacerevolution.cpp  interactivesurfacerevolution.h  interactivetexturedplane.cpp  interactivetexturedplane.h
ExamplesBase/Viewport/: aspectwindow.cpp  aspectwindow.h  interactiveobjectsviewport.cpp  interactiveobjectsviewport.h  viewport.cpp  viewport.h
PrimitiveShapes/: CMakeLists.txt  mainwindow.cpp  viewport.cpp  viewport.h
PrimitiveShapes/Primitives/: interactivedimentionlenght.cpp  interactivedimentionlenght.h  interactiveprimitive.cpp  interactiveprimitive.h  interactiveprimitivebox.cpp  interactiveprimitivebox.h  interactiveprimitivecone.cpp  interactiveprimitivecone.h  interactiveprimitivecylinder.cpp  interactiveprimitivecylinder.h  interactiveprimitiveserializer.cpp  interactiveprimitiveserializer.h
SceneLoading/: CMakeLists.txt  mainwindow.cpp  viewport.cpp  viewport.h  xcafsteploader.cpp  xcafsteploader.h
ShapeToMesh/: CMakeLists.txt  main.cpp  mainwindow.cpp  viewport.cpp  viewport.h
SurfaceEditor/: CMakeLists.txt  main.cpp  mainwindow.cpp  viewport.cpp  viewport.h
SurfaceEditor/Editors/: dimentionlenghteditor.cpp  dimentionlenghteditor.h  interactiveobjectcuboideditor.cpp  interactiveobjectcuboideditor.h  interactiveobjectcylindereditor.cpp  interactiveobjectcylindereditor.h  interactiveobjecteditor.cpp  interactiveobjecteditor.h  interactiveobjecteditorcreator.cpp  interactiveobjecteditorcreator.h  interactiveobjectsurfacecircleofrevoleditor.cpp  interactiveobjectsurfaceplaneeditor.cpp  (+12 more)
TexturedPlain/: CMakeLists.txt  main.cpp  viewport.cpp  viewport.h
(+92 files in other folders)
